[package]
name = "clipboard-server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dotenvy = "0.15.7"
urlencoding = "2.1.2"
aes-gcm = "0.10.1"
hmac = "0.12.1"
pbkdf2 = "0.12.1"
sha2 = "0.10.6"
flate2 = { version = "1.0.26", features = ["zlib"], default-features = false }